# LatentIntercept

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: base_config.yaml
scripts/: infer.py  monitor.py  train.py  training_monitor.py  validate_env.py  visualize_trajectories.py
src/: __init__.py
src/agent/: __init__.py  tdmpc2_config.py
src/environments/: __init__.py  air_hockey_env.py  wrapper.py
src/utils/: __init__.py  logger.py  tdmpc2_path.py
videos/: inferences_zero_shot_500_700_1000.md
